Oppdater build.gradle.kts